# docs/swagger.yaml
@@ -1,22 +1,89 @@
 basePath: /api
 definitions:
-  response.Response:
+  biz.Permission:
     properties:
       code:
-        description: 状态码
+        type: string
+      created_at:
+        type: string
+      description:
+        type: string
+      id:
+        type: integer
+      name:
+        type: string
+      updated_at:
+        type: string
+    type: object
+  biz.Role:
+    properties:
+      created_at:
+        type: string
+      description:
+        type: string
+      id:
+        type: integer
+      name:
+        type: string
+      permissions:
+        items:
+          $ref: '#/definitions/biz.Permission'
+        type: array
+      updated_at:
+        type: string
+    type: object
+  biz.Users:
+    description: 系统用户信息
+    properties:
+      created_at:
+        description: 创建时间
+        type: string
+      email:
+        description: 邮箱
+        type: string
+      id:
+        description: 用户id
+        type: integer
+      phone:
+        description: 手机号
+        type: string
+      roles:
+        description: 角色
+        items:
+          $ref: '#/definitions/biz.Role'
+        type: array
+      status:
+        description: 状态
+        type: boolean
+      updated_at:
+        description: 更新时间
+        type: string
+      username:
+        description: 用户名 唯一
+        type: string
+    type: object
+  response.Response:
+    description: 接口统一返回格式
+    properties:
+      code:
+        description: 状态码 (200-成功, 500-失败)
+        example: 200
         type: integer
       data:
         description: 数据内容
       message:
         description: 提示信息
+        example: success
         type: string
     type: object
   services.LoginParams:
     properties:
       account:
+        default: zhangsan
         description: 账号 邮箱/手机号/用户名
         type: string
       password:
+        default: "123456"
         description: 密码 6-16位
         type: string
     required:
@@ -26,24 +93,23 @@ definitions:
   services.RegisterParams:
     properties:
       account:
+        default: zhangsan
         description: 账号 邮箱/手机号/用户名
         type: string
       password:
+        default: "123456"
         description: 密码 6-16位
         type: string
     required:
     - account
     - password
     type: object
-externalDocs:
-  description: OpenAPI
-  url: https://swagger.io/resources/open-api/
 host: localhost:3333
 info:
   contact:
     email: 1227379879@qq.com
     name: North
-  description: 权限管理系统swagger api介绍
+  description: 权限管理系统api
   termsOfService: http://swagger.io/terms/
   title: 权限管理系统
   version: "1.0"
@@ -59,15 +125,26 @@ paths:
         "200":
           description: OK
           schema:
+            allOf:
+            - $ref: '#/definitions/response.Response'
+            - properties:
+                data:
+                  $ref: '#/definitions/biz.Users'
+              type: object
+        "500":
+          description: Internal Server Error
+          schema:
             $ref: '#/definitions/response.Response'
+      security:
+      - ApiKeyAuth: []
       summary: 获取用户信息
       tags:
-      - 用户
+      - 用户模块
   /user/login:
     post:
       consumes:
       - application/json
-      description: 登录
+      description: 用户登录，返回token
       parameters:
       - description: 用户信息
         in: body
@@ -81,10 +158,19 @@ paths:
         "200":
           description: OK
           schema:
+            allOf:
+            - $ref: '#/definitions/response.Response'
+            - properties:
+                data:
+                  type: string
+              type: object
+        "500":
+          description: Internal Server Error
+          schema:
             $ref: '#/definitions/response.Response'
-      summary: 登录
+      summary: 用户登录
       tags:
-      - 用户
+      - 用户模块
   /user/register:
     post:
       consumes:
@@ -103,11 +189,22 @@ paths:
         "200":
           description: OK
           schema:
+            allOf:
+            - $ref: '#/definitions/response.Response'
+            - properties:
+                data:
+                  type: integer
+              type: object
+        "500":
+          description: Internal Server Error
+          schema:
             $ref: '#/definitions/response.Response'
       summary: 注册
       tags:
-      - 用户
+      - 用户模块
 securityDefinitions:
-  BasicAuth:
-    type: basic
+  ApiKeyAuth  API的认证方式:
+    in: header 发送认证的方式
+    name: Authorization  后端获取认证值得方式
+    type: apiKey
 swagger: "2.0"
